--- a/src/template/index.html
+++ b/src/template/index.html
@@ -13,8 +13,8 @@
 
 
 
-    <script type="text/javascript" src="../js/lib/require.js"></script>
-    <script type="text/javascript" src="../js/lib/require-config.js"></script>
+    <script type="text/javascript" src="../js/common/require.js"></script>
+    <script type="text/javascript" src="../js/common/require-config.js"></script>
     <script type="text/javascript">
         (function(){
             requirejs.config({baseUrl:"../"});
